[package]
name = "bitcoin-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.82"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm" }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[patch.crates-io.base58check]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"