[package]
name = "bitcoin-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.82"
bitcoin = { version = "0.32.0", features = ["rand"] }
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script", tag = "1.0.0" }
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec", tag = "1.0.0", features = ["debug"] }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.dev]
opt-level = 3

[profile.release]
lto = true